# FlowTIME

./: .gitignore  CMakeLists.txt  README.md  main.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  widget.cpp  widget.h  widget.ui
